# ars

./: .env.example  .gitignore  Anchor.toml  BUILD_COMMANDS_WSL2.sh  COMPARISON_REPORT.md  Cargo.toml  DEPLOYMENT_SUCCESS.md  Dockerfile.railway  FORUM_POST.md  FORUM_POST_SUCCESS.md  FRONTEND_BACKEND_INTEGRATION.md  INITIALIZATION_MANUAL.md  QUICK_SETUP.md  QUICK_START.md  README.md  REGISTRATION_GUIDE.md  REGISTRATION_SUCCESS.md  RENAME_SUMMARY.md  TASK_16_COMPLETION.md  build-admin.ps1  build-docker.ps1  build-final.ps1  build-manual.ps1  build.sh  docker-compose.yml  ecosystem.config.js  package-lock.json  package.json  post-forum-simple.sh  post-forum.py  post-forum.sh  railway.toml  reset-and-migrate.ps1  setup-demo.cmd  start-openclaw.cmd
.kiro/hooks/: code-quality-analyzer.kiro.hook
.kiro/llms/: lp-army-llms.txt  solana-policy-institute-llms.txt
.openclaw/: SECURITY_ALERT_CLAWHUB.md  config.json  swarm-config.json
ars-protocol/: README.md  Trident.toml  package-lock.json  package.json  show-program-info.sh
ars-protocol/programs/ars-token/: Cargo.toml
ars-protocol/programs/ars-token/src/: errors.rs  lib.rs  state.rs
backend/: .dockerignore  .env.example  .gitignore  AGENT_ALICE_SIMULATION.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_AUDIT.md  Dockerfile  Dockerfile.railway  FINAL_ENDPOINT_TEST_REPORT.md  PRODUCTION_READINESS.md  PRODUCTION_TEST_RESULTS.md  README.md  WORK_SUMMARY.md  ars-llms.txt  nixpacks.toml  package-lock.json  package.json  railway.toml  test-all-endpoints.ps1  test-endpoints-simple.ps1  tsconfig.build.json  validate-dockerfile.sh  verify-real-api.ts
documentation/: CODE_REVIEW_ANALYSIS.md  COLOSSEUM_REGISTRATION.md  IMPLEMENTATION_SUMMARY.md  QUICK_REGISTER.md  RAILWAY_DEPLOYMENT.md  SECURITY_ISSUES_ROADMAP.md  SECURITY_REVISION_DESIGN.md  SIPHER_API_DOCUMENTATION.md  SIPHER_DEVELOPER_GUIDE.md  SIPHER_INTEGRATION_PLAN.md  SIPHER_OPERATIONS_GUIDE.md  SOLANA_CORE_IMPLEMENTATION_COMPLETE.md  SOLANA_CORE_IMPROVEMENTS.md
frontend/: .env.example  README.md  index.html  package.json  tailwind.config.js
frontend-old/: .env.example  tailwind.config.js  vite.config.ts
icb-protocol/: Anchor.toml
programs/: README.md
programs/ars-reserve/: Cargo.toml
programs/ars-reserve/src/: errors.rs  lib.rs  state.rs
programs/ars-reserve/src/instructions/: deposit.rs  initialize_vault.rs  rebalance.rs  update_vhr.rs  withdraw.rs
programs/ars-reserve/src/utils/: cpi_helpers.rs  mod.rs  security.rs
programs/ars-token/: Cargo.toml
programs/ars-token/src/: lib.rs  state.rs
programs/ars-token/src/instructions/: burn_icu.rs  initialize_mint.rs  mint_icu.rs  start_new_epoch.rs
programs/icb-token/: Cargo.toml
programs/icb-token/src/: errors.rs  lib.rs  state.rs
programs/icb-token/src/instructions/: burn_icu.rs  initialize_mint.rs  mint_icu.rs  mod.rs
scripts/: autonomous-deploy.sh  build-windows.ps1  check-programs.js  create-ars-forum-post.ps1  create-ars-forum-post.sh  create-forum-post.ps1  create-forum-post.sh  create-project.ps1  create-project.sh  deploy-devnet-complete.ps1  deploy-devnet.ps1  deploy-devnet.sh  generate-idl.sh  heartbeat.ps1  heartbeat.sh  initialize-all.js  initialize-programs.sh  initialize-programs.ts  initialize-without-idl.ts  install-anchor-cli.sh  register-ars-colosseum.sh  rename-icb-to-acb.ps1  rename-to-ars.ps1  rename-to-ars.sh  security-pipeline.sh  test-backend-endpoints.sh  test-frontend-backend.ps1
sdk/: README.md  package.json
sdk/src/: client.ts  (+3 more)
supabase/: FULL_MIGRATION_ALL_001-012.sql  MIGRATION_013_ICR_HISTORY.sql  MIGRATION_GUIDE.md  init.sql  kong.yml  reset_database.sql
(+260 files in other folders)
