[workspace]
members = [
    "programs/ars-core",
    "programs/ars-reserve",
    "programs/ars-token"
]
resolver = "2"

[workspace.dependencies]
# Anchor Framework - v0.30.1 for Solana 1.18.x compatibility
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

# Test dependencies
proptest = "1.4"

# Pin to avoid edition2024 requirement
constant_time_eq = "=0.3.1"
blake3 = "=1.5.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
