[package]
name = "ars-reserve"
version = "0.1.0"
description = "ARS Reserve Program - Multi-asset reserve vault management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ars_reserve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
