[package]
name = "ars-reserve"
version = "0.1.0"
description = "ARS Reserve Program - Multi-asset reserve vault management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ars_reserve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
