[package]
name = "ars-token"
version = "0.1.0"
description = "ARS Token Program - ARU token with controlled mint/burn"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ars_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
