[package]
name = "ars-token"
version = "0.1.0"
description = "ARS Token Program - ARU token with controlled mint/burn"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ars_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
